changed description text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="phone_number">(609) 394&#8211;2056</string>
     <string name="office_hours">M-F 9:00am&#8211;7pm</string>
     <string name="website">https://www.catholiccharitiestrenton.org/locations/el-centro/</string>
-    <string name="description">Family resources &amp; immigration services</string>
+    <string name="description">Family Resources &amp; Immigration Services</string>
 </resources>
